# pOptiPharm

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vcpkg.json
include/functions/: ElectrostaticSimilarity.h  Extras.h  MoveAndRotate.h  Parameters.h  Plot.h  Tanimoto.h  VolumeOverlap.h  acc.cuh  pool.hpp  sorting.hpp
include/model/: Atom.h  Bond.h  Box.h  Molecule.h  Point3DDouble.h  Point3DInteger.h  Quaternion.h
include/read_write/: ReadMolecule.h  ReadMoleculeSD.h  WriteMolecule.h
include/uego/: configur.h  managespecies.h  master.h  nmol.h  searchsp.h  speclist.h  uego.h  uegoconf.h  uegoini.h  uegorand.h  usrintf.h
src/functions/: Extras.cpp  MoveAndRotate.cpp  Parameters.cpp  Plot.cpp  Tanimoto.cpp  VolumeOverlap.cpp  acc.cu  pool.cpp  sorting.cpp
src/model/: Atom.cpp  Bond.cpp  Box.cpp  Molecule.cpp  Point3DDouble.cpp  Point3DInteger.cpp  Quaternion.cpp
src/read_write/: ReadMolecule.cpp  ReadMoleculeSD.cpp  WriteMolecule.cpp
src/uego/: ini.cc  managespecies.cpp  master.cc  nmol.cc  speclist.cc  sspopt.cc
src/uego/project/: molvalES.cc  molvalES.cc.bk  molvalSS.cc  nrealopt.cc
src/uego/usrintf/: configur.cc  main.cc  mainOriginal.cc  msgintf.cc
